# CanSat02

./: .$全体アルゴリズム.drawio.bkp  .buildinfo  CanSat.drawio  README.md  cansatapi.html  genindex.html  how_to_build_docs.html  index.html  message.html  modules.html  objects.inv  operation_check.html  procedure_manual.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sender.html  setup.py  test.mermaid  util.html  全体アルゴリズム.drawio
.devcontainer/: devcontainer.json
9軸センサ/: NineAxis.py  NineAxisSensor.py  NineAxisSensor仕様書.txt  NineAxisTest.py
CanSatAPI/: __init__.py  battery.py  nine_axis.py  nineaxissensor.py  temperature.py
GPS/: DistanceAzimuth.py  DistanceAzimuthの仕様書.txt  gps.py  gpsOriginal.py  gpsTest.py  gpsの仕様書.txt
Xbee/: Receive.py  send.drawio  send.py  sendの仕様書.txt
_sources/: cansatapi.rst.txt  how_to_build_docs.md.txt  message.rst.txt  sender.rst.txt  util.rst.txt
battery/: Battery.py  battery.py  test_battery.py
camera/: CameraTest.py  camera.py  test_camera.py
cansatapi/: XBee.py  __init__.py  barometer.py  batteryfuelgauge.py  batteryvoltagegauge.py  bme280.py  camera.py  dcmotor.py  distance.py  gps.py  ina219.py  lps25hb.py  nineaxissensor.py  point_declination.py  pyproject.toml  roll.py  send.py  servo.py  soil_moisture.py  temperature.py  xbee.py
distance/: Distance.py  DistanceTest.py  distance.py  test_distance.py
experiment/: automatic_control.py  driving_test.py  drop_test.py  droping_test.py  geared_motor.py  mag_field_test.py  measure_xbee_time.py  parachute_separation.py  sample _structure.py  (+4 more)
(+148 files in other folders)
